# umamusume-auto-train

./: main.py  pyproject.toml
core/: assets.py  events.py  execute.py  global_state.py  logic.py  ocr.py  recognizer.py  screen.py  skill.py  state.py
core/data/: config.py  races.py  regions.py  skills.py
data/: races.json  regions.json
server/: main.py
utils/: constants.py  log.py  mouse.py  scenario.py  screen.py  screenshot.py  tools.py
